--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 		<script src="bower_components/jquery/jquery.js"></script>
 		<script src="bower_components/underscore/underscore.js"></script>
 		<script src="bower_components/backbone/backbone.js"></script>
-		<script src="bower_components/backbone.localStorage/backbone.localStorage.js"></script>
+		<script src="node_modules/swarm/dist/swarm-html5.js"></script>
+		<script src="js/host.js"></script>
 		<script src="js/models/todo.js"></script>
 		<script src="js/collections/todos.js"></script>
 		<script src="js/views/todo-view.js"></script>
