--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="backbonejs">
 	<head>
 		<meta charset="utf-8">
-		<title>Backbone.js • TodoMVC</title>
+		<title>Swarm.js • Backbone.js • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 	</head>
 	<body>
@@ -20,8 +20,8 @@
 		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
-			<p>Written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>Written by <a href="https://github.com/swarmjs">Swarm.js team</a></p>
+			<p>Based on <a href="http://todomvc.com/examples/backbone/">Backbone.js TodoMVC example</a></p>
 		</footer>
 		<script type="text/template" id="item-template">
 			<div class="view">
